--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
     "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
